--- a/FourierAudio.csproj
+++ b/FourierAudio.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>FourierSong.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SoundLoader.cs" />
+    <Compile Include="MySoundPlayer.cs" />
     <Compile Include="Spectral.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
@@ -54,8 +59,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoundData.cs" />
+    <Compile Include="SoundFile.cs" />
     <Compile Include="SoundDrawer.cs" />
+    <Compile Include="ucSoundDisplay.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucSoundDisplay.Designer.cs">
+      <DependentUpon>ucSoundDisplay.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -69,6 +80,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ucSoundDisplay.resx">
+      <DependentUpon>ucSoundDisplay.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
